# activemodel

./: .buildinfo  .copier-answers.yml  .envrc  .gitignore  .tool-versions  CHANGELOG.md  Justfile  MIGRATE_TYPEID.md  README.md  TODO  alembic.html  alembic.html.md  changelog.html  changelog.html.md  docker-compose.yml  examples.html  examples.html.md  genindex.html  getting-started.html  getting-started.html.md  index.html  index.html.md  instructions.md  investigate_patches_prompt.md  llms-full.txt  llms.txt  mutation-tracking.html  mutation-tracking.html.md  objects.inv  playground.py  py-modindex.html  pyproject.toml  pytest.html  pytest.html.md  search.html  searchindex.js  sql-logging.html  typeid.html  whenever.html  whenever.html.md
.doctrees/: alembic.doctree  changelog.doctree  examples.doctree  getting-started.doctree  index.doctree  mutation-tracking.doctree  pytest.doctree  sql-logging.doctree  typeid.doctree  whenever.doctree
.doctrees/__intersphinx_cache__/: pydantic_objects.inv  sqlalchemy_objects.inv
.doctrees/autoapi/: index.doctree
.github/workflows/: build_and_publish.yml  docs.yml
_modules/: index.html
_modules/activemodel/: base_model.html  celery.html  cli.html  decorators.html  errors.html  jsonb_snapshot.html  logger.html  query_wrapper.html  session_manager.html  utils.html
_sources/: alembic.md.txt  examples.md.txt  index.md.txt  pytest.md.txt  typeid.md.txt  whenever.md.txt
_sources/autoapi/: index.rst.txt
activemodel/: __init__.py  automap.py  base_model.py  celery.py  decorators.py  field_comments.py  field_info_patch.py  get_column_from_field_patch.py  jsonb_snapshot.py  patches.py  query_wrapper.py  session_manager.py  timestamps.py  utils.py
activemodel/cli/: __init__.py  __main__.py
activemodel/json/: tracked_list.py  tracked_model.py  tracked_pydantic.py
activemodel/mixins/: __init__.py  auto_relationships.py  pydantic_json.py  soft_delete.py  timestamps.py  typeid.py
activemodel/patches/: __init__.py  get_column_from_field_patch.py  get_sqlalchemy_type_patch.py
activemodel/pytest/: __init__.py  factories.py  plugin.py  transaction.py  truncate.py
activemodel/types/: __init__.py  sqlalchemy_protocol.py  sqlalchemy_protocol.pyi  typeid.py  typeid_patch.py  whenever.py
activemodel/utils/: camelcase.py
autoapi/: index.html  index.html.md
autoapi/activemodel/: index.html  index.html.md
docs/: automap_snake_case.md  conf.py  examples.md  index.md  mutation-tracking.md  sql-logging.md  typeid.md  whenever.md
docs/_static/: custom.css
examples/: whenever_typeid_and_sqlite.py
playground/: comments.py
pytest/: table_name_test.py
scripts/: generate_sqlalchemy_protocol.py
test/: after_load_test.py  automap_test.py  comments_test.py  conftest.py  constraint_naming_test.py  delete_test.py  factory_test.py  fastapi_test.py  lifecycle_test.py  migrations_test.py  models.py  nested_pydantic_json_test.py  orm_test.py  serialization_test.py  session_manager_test.py  test_query_wrapper.py  test_wrapper.py  typeid_test.py  utils.py
test/lifecycle/: _helpers.py  conftest.py  test_after_create.py  test_after_delete.py  test_after_find.py  test_after_initialize.py  test_after_save.py  test_after_update.py  test_around_delete.py  test_around_save.py  test_before_create.py  test_before_delete.py  test_before_save.py  test_before_update.py  test_general.py
test/migrations/: alembic.ini
test/orm/: test_upsert.py
test/types/: base_model_test.py  typeid_pydantic_test.py  typeid_sqlmodel_test.py
tests/: comments_test.py  decorators_test.py  delete_test.py  factory_test.py  fastapi_test.py  migrations_test.py  models.py  mutation_test.py  nested_pydantic_json_test.py  orm_test.py  session_manager_test.py  soft_delete_test.py  test_import.py  test_query_wrapper.py  timestamps_test.py  utils.py  utils_test.py
tests/lifecycle/: _helpers.py  conftest.py  (+13 more)
(+183 files in other folders)
