[project]
name = "activemodel"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["sqlmodel>=0.0.22"]
authors = [{ name = "Michael Bianco", email = "iloveitaly@gmail.com" }]
keywords = []
urls = { "Repository" = "https://github.com/iloveitaly/activemodel" }

[project.scripts]
activemodel = "python_package_template:main"

# https://github.com/astral-sh/uv/issues/5200
[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
