[project]
name = "activemodel"
version = "0.15.1"
description = "Make SQLModel more like an a real ORM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-decouple-typed>=3.11.0",
    "sqlmodel==0.0.37",
    "textcase>=0.4.0",
    "typeid-python==0.3.3",
]
authors = [{ name = "Michael Bianco", email = "iloveitaly@gmail.com" }]
keywords = ["sqlmodel", "orm", "activerecord", "activemodel", "sqlalchemy"]
urls = { "Repository" = "https://github.com/iloveitaly/activemodel" }

[project.entry-points.pytest11]
activemodel = "activemodel.pytest.plugin"

[build-system]
requires = ["uv_build>=0.9.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

# https://github.com/astral-sh/uv/issues/5200
[tool.uv]
package = true

[dependency-groups]
debugging-extras = ["pytest-watcher>=0.4.3"]
dev = [
    "ipdb>=0.13.13",
    "pdbr>=0.8.9",
    "psycopg[binary]>=3.2.3",
    "pytest>=8.3.3",
    "pydantic>=2.10.0",
    "fastapi[standard]>=0.115.6",
    "alembic>=1.14.1",
    "pyright[nodejs]>=1.1.398",
    "polyfactory>=2.22.1",
    "ruff>=0.8.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
