[project]
name = "activemodel"
version = "0.19.0"
description = "SQLModel with developer ergonomics. Make SQLModel act like ActiveRecord."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-decouple-typed>=3.11.0",
    "sqlmodel==0.0.37",
    "textcase>=0.4.0",
    "typeid-python==0.3.3",
]
authors = [{ name = "Michael Bianco", email = "iloveitaly@gmail.com" }]
keywords = ["sqlmodel", "orm", "activerecord", "activemodel", "sqlalchemy"]
urls = { "Repository" = "https://github.com/iloveitaly/activemodel", "Documentation" = "https://iloveitaly.github.io/activemodel/" }

[project.optional-dependencies]
docs = [
    "sphinx>=7.1.2",
    "shibuya",
    "myst-parser>=2.0.0",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-autobuild",
    "sphinx-autoapi",
    "sphinx-autodoc-typehints",
    "sphinx-paramlinks",
    "sphinx-llm",
]

[project.entry-points.pytest11]
activemodel = "activemodel.pytest.plugin"

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

# https://github.com/astral-sh/uv/issues/5200
[tool.uv]
package = true

[dependency-groups]
debugging-extras = ["pytest-watcher>=0.4.3"]
dev = [
    "ipdb>=0.13.13",
    "pdbr>=0.8.9",
    "psycopg[binary]>=3.2.3",
    "pytest>=8.3.4",
    "pydantic>=2.10.0",
    "fastapi[standard]>=0.115.6",
    "alembic>=1.14.1",
    "pyright[nodejs]>=1.1.408",
    "polyfactory>=2.22.1",
    "ruff>=0.15.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["activemodel"]

[tool.coverage.report]
fail_under = 50

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
